@@ -1,49 +1,16 @@
-RELEASE News of simspark-0.2
+RELEASE News of simspark-0.2.1
 
 In this release you can find some bug and compilation fixes, improved Windows
-support and some new features including a new sensor and features to facilitate
-agent debugging and development. It also provides a more deterministic behavior 
-for agents which should make them more reliable.
+support and some new features such as the potential of using different 
+physical simulation engines.
 
 * New features:
- - An Accelerometer sensor which reports the linear acceleration
- - A "Sync Mode" operation is introduced. In this mode, the server will not
-   advance to the next cycle until all connected agents send a "(syn)" command
-   to the server. You can use this mode by setting "agentSyncMode" to true in
-   simspark.rb (or spark.rb)
- - Simulator will run in simulation time mode instead of real time
-   if "useRealTime" variable is set to false in simspark.rb (or spark.rb)
+ - The core physics system does no longer depend on ODE (Thanks to Andreas). 
+ ODE implementation is now provided as a plugin.
    
-* More deterministic agent-server communication
- - Simspark will now collect received commands right before sending
-   sense data of the last cycle. So, any commands which is sent by agents
-   after receiving new sense data will be executed in the next cycle, not the 
-   current one. This results in a more deterministic behavior, and agents' 
-   efficiency should not change between remote and local runs considerably.
- - An Accelerometer sensor
- - Fixed some rendering bugs (agents not visible through goals)
- - A "Sync Mode" operation is introduced. In this mode, the server will not
-   advance to the next cycle untill all connected agents send a "(syn)" command
-   to the server. You can use this mode by setting "agentSyncMode" to true in
-   simspark.rb (or spark.rb)
- - Simulator will run in simulation time mode instead of real time
-   if "useRealTime" variable is set to false in simspark.rb (or spark.rb)
- - To make changes to most of the resource files (e.g. simspark.rb), you can
-   create a copy in ~/.simspark directory and make desired changes there. The 
-   directory structure of the original files should be preserved (e.g.
-   rsg/agent/nao/nao.rgs)
-
-* More convenience:
- - Simspark should always accept connections. No more "Connection refused"
-   messages and the need to wait for simspark's network port to be freed!
- - To make changes to most of the resource files (e.g. simspark.rb), you can
-   create a copy in ~/.simspark directory and make desired changes there. The 
-   directory structure of the original files should be preserved (e.g.
-   rsg/agent/nao/nao.rgs)
-
 * Fixes:
- - Compilation fixes
- - Fixed some rendering bugs (agents not visible through goals)
+ - Compilation fixes on newer compilers (VS 2010)
+ - Fixed some bugs on 64 bit systems and in multi-threaded mode
 
 You can get the package on the Simspark page on SourceForge
 at http://sourceforge.net/projects/simspark/
